--- a/public/index.html
+++ b/public/index.html
@@ -852,8 +852,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>My name is Deepak Bastola, a name synonymous with
-a blend of statistical acumen and cosmic curiosity. My academic journey, punctuated by a Ph.D. in Applied Statistics and a joint M.S. in Astronomy and Astrophysics, mirrors my relentless pursuit of knowledge. This journey has been marked by my fervor for leveraging statistical techniques to comprehend astronomical phenomena and devise insightful data‑driven narratives. My  research interests include Bayesian statistics, time series methodology, and statistical computation.</p>
+      <p>Deepak Bastola here, someone who is deeply passionate about the interplay between statistics and the mysteries of the cosmos. My educational background includes a Ph.D. in Applied Statistics and an M.S. in Astronomy and Astrophysics, both of which have equipped me to delve deeper into my quest for understanding. Throughout this academic path, I&rsquo;ve been fortunate to employ statistical approaches in an effort to better understand astronomical events and to create meaningful data interpretations. My primary research areas are Bayesian statistics, time series methodology, statistical computation, and machine learning.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
