--- a/public/courses/stat120/week5/index.html
+++ b/public/courses/stat120/week5/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 13 Slides (pdf/html)" />
+  <meta name="description" content="Day 13 Slides (pdf/html)
+Day 14 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week5/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat120/week5/" />
   <meta property="og:title" content="Week 5 | Deepak Bastola" />
-  <meta property="og:description" content="Day 13 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 13 Slides (pdf/html)
+Day 14 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -793,9 +795,8 @@
 
           <div class="article-style">
             <p>Day 13 Slides (<a href="/stat120/Day13.pdf" target="_blank">pdf</a>/<a href="/stat120/Day13.html" target="_blank">html</a>)</p>
+<p>Day 14 Slides (<a href="/stat120/Day14.pdf" target="_blank">pdf</a>/<a href="/stat120/Day14.html" target="_blank">html</a>)</p>
 <!--
-
-Day 14 Slides (<a href="/stat120/Day14.pdf" target="_blank">pdf</a>/<a href="/stat120/Day14.html" target="_blank">html</a>)
 
 Day 15 Slides (<a href="/stat120/Day15.pdf" target="_blank">pdf</a>)
 
