--- a/static/stat120/Day14.html
+++ b/static/stat120/Day14.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 10 2023
+ October 11 2023
 
 
 ---
@@ -69,7 +69,7 @@ A new blood thinning drug is being tested against the current drug in a double-b
 .hljs[
 A. `\(\mathrm{H}_0: \mu_{\mathrm{n}}&gt;\mu_0 \quad\mathrm{Vs}\quad \mathrm{H}_{\mathrm{a}}: \mu_{\mathrm{n}}=\mu_{\mathrm{o}}\)`
 
-B. `\(H_0: \mu_n=\mu_0 \quad \mathrm{Vs} \quad H_2: \mu_n \neq \mu_0\)`
+B. `\(\mathrm{H}_0: \mu_{\mathrm{n}}=\mu_0\quad\mathrm{Vs}\quad\mathrm{H}_{\mathrm{a}}: \mu_{\mathrm{n}} \neq \mu_0\)`
 
 C. `\(\mathrm{H}_0: \mu_{\mathrm{n}}=\mu_0\quad\mathrm{Vs}\quad\mathrm{H}_{\mathrm{a}}: \mu_{\mathrm{n}}&gt;\mu_0\)`
 
@@ -349,7 +349,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_995551dc" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_a5e259e8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
