--- a/public/event/index.html
+++ b/public/event/index.html
@@ -607,34 +607,17 @@
   </div>
 
   <div class="page-body">
+    <div class="row">
     
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-  
-  
-  
+    <div class="col-md-6">
+        <div class="project-item">
+            <img src="" alt="Example Talk" />
+            <h3>Example Talk</h3>
+            <p>An example talk using Wowchemy&rsquo;s Markdown slides feature.</p>
+        </div>
+    </div>
     
-  
-<div class="universal-wrapper pt-3">
-  <h1>Recent &amp; Upcoming Talks</h1>
-
-  
-
-  
 </div>
-
 
 
 <div class="universal-wrapper">
