--- a/public/publication-type/2/index.html
+++ b/public/publication-type/2/index.html
@@ -607,17 +607,35 @@
   </div>
 
   <div class="page-body">
-    <div class="row">
     
-    <div class="col-md-6">
-        <div class="project-item">
-            <img src="" alt="An example journal article" />
-            <h3>An example journal article</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tellus ac convallis placerat. Proin tincidunt magna sed ex sollicitudin condimentum.</p>
-        </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  
+  
+  
     
+  
+<div class="universal-wrapper pt-3">
+  <h1>2</h1>
+
+  
+
+  
 </div>
+
 
 
 <div class="universal-wrapper">
