--- a/public/index.html
+++ b/public/index.html
@@ -1188,7 +1188,7 @@
     
     <a href="/project/internal-project/informer-timeseries/"  class="summary-link">
       <div class="article-style">
-        Informer The Informer model variant is designed for multivariate prediction. Let&rsquo;s consider &lsquo;Open&rsquo;, &lsquo;High&rsquo;, &lsquo;Low&rsquo;, and &lsquo;Close&rsquo; prices for simplicity. The provided code is designed to fetch and preprocess historical stock prices for Apple Inc.
+        Informer We aim to predict stock prices for Apple Inc. using multivariate time series data, focusing on &lsquo;Open&rsquo;, &lsquo;High&rsquo;, &lsquo;Low&rsquo;, and &lsquo;Close&rsquo; prices. The process begins by acquiring historical stock data from Yahoo Finance.
       </div>
     </a>
     
