--- a/static/stat120/Day15.html
+++ b/static/stat120/Day15.html
@@ -406,6 +406,23 @@ qnorm(.75,580,70)
     &lt;/div&gt;
 &lt;/center&gt;
 
+---
+
+class: center, middle
+
+# Big Idea for Normal Models: .bold[All we need is a z-score.]
+
+
+
+.bql.font180[
+## .b[Standard Normal:]
+
+`\begin{align*}
+\mu=0, \sigma=1 \quad \Longrightarrow Z \sim N(0,1)
+\end{align*}`
+
+]
+
 
 
 
@@ -422,23 +439,6 @@ When have we already been using normal models??
 - Normal models play a huge role in statistical inference.
 
 - If we know the .bold[(bootstrap/randomization) standard error] then we can just use a normal model rather than a resampling model (which requires more computational effort)
-]
-
----
-
-class: center, middle
-
-# Big Idea for Normal Models: .bold[All we need is a z-score.]
-
-
-
-.bql.font180[
-## .b[Standard Normal:]
-
-`\begin{align*}
-\mu=0, \sigma=1 \quad \Longrightarrow Z \sim N(0,1)
-\end{align*}`
-
 ]
 
 
@@ -462,7 +462,7 @@ class: action
 
 ]
 
-<div class="countdown" id="timer_c8b48bed" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_3fbdab75" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
