--- a/static/stat120/Day15.html
+++ b/static/stat120/Day15.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 12 2023
+ October 13 2023
 
 
 ---
@@ -462,7 +462,7 @@ class: action
 
 ]
 
-<div class="countdown" id="timer_3fbdab75" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_74db331b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
