--- a/public/index.html
+++ b/public/index.html
@@ -1248,7 +1248,7 @@
     
     <a href="/project/internal-project/wpca-exoplanet/"  class="summary-link">
       <div class="article-style">
-        The figure below showcases a spectrum integral to exoplanet detection, charting the transit depth against the wavelength in microns. Every observation point in the spectrum carries an inherent uncertainty, denoted by the vertical error bars.
+        # Import required libraries import numpy as np import pandas as pd import matplotlib.pyplot as plt import seaborn as sns The figure below showcases a spectrum integral to exoplanet detection, charting the transit depth against the wavelength in microns.
       </div>
     </a>
     
