--- a/public/stat120/Day16.html
+++ b/public/stat120/Day16.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- May 02 2023
+ October 17 2023
 
 
 ---
@@ -567,7 +567,7 @@ class: middle
 
 class: inverse
 
-# What if we wanted a 90% CI? What z-score should we use to get the margin of error?
+# What if we wanted a 90% CI? What z-score should we use?
 
 --
 
@@ -623,19 +623,20 @@ class: action
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
 .pull-right-60[
+
 &lt;br&gt;
-.bq[
-
-Let's go over to the class activity .Rmd file and complete the tasks for today.
+.bql[
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
+]
 
 
 ]
 
-]
-
-<div class="countdown" id="timer_2df81a32" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_393295ef" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
