--- a/public/courses/stat120/week6/index.html
+++ b/public/courses/stat120/week6/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 16 Slides (pdf/html)" />
+  <meta name="description" content="Day 16 Slides (pdf/html)
+Day 17 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week6/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat120/week6/" />
   <meta property="og:title" content="Week 6 | Deepak Bastola" />
-  <meta property="og:description" content="Day 16 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 16 Slides (pdf/html)
+Day 17 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -793,11 +795,7 @@
 
           <div class="article-style">
             <p>Day 16 Slides (<a href="/stat120/Day16.pdf" target="_blank">pdf</a>/<a href="/stat120/Day16.html" target="_blank">html</a>)</p>
-<!--
-
-Day 17 Slides (<a href="/stat120/Day17.pdf" target="_blank">pdf</a>/<a href="/stat120/Day17.html" target="_blank">html</a>)
-
--->
+<p>Day 17 Slides (<a href="/stat120/Day17.pdf" target="_blank">pdf</a>/<a href="/stat120/Day17.html" target="_blank">html</a>)</p>
 
           </div>
 
