--- a/public/courses/stat120/week7/index.html
+++ b/public/courses/stat120/week7/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 18 Slides (pdf/html)" />
+  <meta name="description" content="Day 18 Slides (pdf/html)
+Day 19 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week7/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat120/week7/" />
   <meta property="og:title" content="Week 7 | Deepak Bastola" />
-  <meta property="og:description" content="Day 18 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 18 Slides (pdf/html)
+Day 19 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -793,9 +795,8 @@
 
           <div class="article-style">
             <p>Day 18 Slides (<a href="/stat120/Day18.pdf" target="_blank">pdf</a>/<a href="/stat120/Day18.html" target="_blank">html</a>)</p>
+<p>Day 19 Slides (<a href="/stat120/Day19.pdf" target="_blank">pdf</a>/<a href="/stat120/Day19.html" target="_blank">html</a>)</p>
 <!--
-
-Day 19 Slides (<a href="/stat120/Day19.pdf" target="_blank">pdf</a>/<a href="/stat120/Day19.html" target="_blank">html</a>)
 
 Day 20 Slides (<a href="/stat120/Day20.pdf" target="_blank">pdf</a>/<a href="/stat120/Day20.html" target="_blank">html</a>)
 
