--- a/static/stat120/Day19.html
+++ b/static/stat120/Day19.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- May 10 2023
+ October 24 2023
 
 
 ---
@@ -70,7 +70,9 @@ If `\(n \geq 30^*\)`, then
 
 ]
 
-.hljs[*Smaller sample sizes may be sufficient for symmetric distributions, and 30 may not be sufficient for very skewed distributions or distributions with high outliers]
+.hljs[
+*Smaller sample sizes may be sufficient for symmetric distributions, and 30 may not be sufficient for very skewed distributions or distributions with high outliers
+]
 
 ---
 
@@ -176,10 +178,17 @@ class: middle
 
 ---
 
+class: inverse, middle
 
-# Inference for means
+.Large.bql.center[Hypothesis Test for a Mean]
 
-.green-h[.purple[Check:] Check the one sample size conditions for the CLT]
+---
+
+
+
+# Inference for means: Hypothesis tests
+
+.blue-h[.purple[Check:] Check the one sample size conditions for the CLT]
 
 .pull-left[
 .bql[
@@ -378,7 +387,7 @@ sd(lakes$pH)
 - .bold[Interpret:] The p-value is 0.025. If the mean pH of all lakes is 7, then we would see a sample mean that is at least 2.31 SEs away from 7 about 2.5% of the time in samples of 53 lakes. 
 
 
-- .bold[Conclusion:] There is a statistically significant difference between the observed mean pH of 6.591 and the hypothesized mean of 7 (t=-2.31, df=52, p=0.025). 
+- .bold[Conclusion:] There is a statistically discernible difference between the observed mean pH of 6.591 and the hypothesized mean of 7 (t=-2.31, df=52, p=0.025). 
 ]
 ]
 
@@ -426,7 +435,7 @@ qt(.975, df=53-1)
 [1] 2.006647
 ```
 
-..hljs[We are 95% confident that the mean pH of all lakes is between 6.236 and 6.946 (slightly acidic)]
+.hljs[We are 95% confident that the mean pH of all lakes is between 6.236 and 6.946 (slightly acidic)]
 
 ---
 
@@ -639,40 +648,6 @@ c) `\(2 \cdot \mathrm{t}^* \cdot \frac{s}{\sqrt{n}}\)`
 
 class: middle
 
-# GPA
-
-.bql[Suppose we want to estimate average GPA at a college (where GPA's go from 0 to 4.0), with a margin of error of 0.1 with `\(95 \%\)` confidence. How large a sample size do we need?
-
-(a) About 100
-
-(b) About 400
-
-(c) About 800
-
-(d) About 1000
-
-
-]
-
-&lt;details&gt;
-&lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
-`\begin{aligned}
-&amp; s \approx \frac{\max -\min }{4}=\frac{4-0}{4}=1.0 \\
-&amp; n=\left(\frac{Z * s}{M E}\right)^2 \approx\left(\frac{2 \cdot 1}{0.1}\right)^2=400
-\end{aligned}`
-&lt;/details&gt;
-
-
----
-
-class: inverse, middle
-
-.Large.bql.center[Hypothesis Test for a Mean]
-
----
-
-class: middle
-
 # Chips Ahoy!
 
 .hljs[A group of Air Force cadets bought bags of Chips Ahoy! cookies from all over the country to verify this claim.  They hand counted the number of chips in 42 bags.]
@@ -778,34 +753,6 @@ class: middle
 
 ---
 
-# Sanity check!
-
-.bql[
-Which of the following properties is/are necessary for `\(t=\frac{\bar{X}-\mu_0}{s / \sqrt{n}}\)` to have a `\(t\)`-distribution?
-
-a) the data is normal
-
-b) the sample size is large
-
-c) the null hypothesis is true
-
-d) `\(a\)` or `\(b\)`
-
-e) `\(d\)` and `\(c\)`
-
-]
-
-&lt;br&gt;
-&lt;details&gt;
-&lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
-.hljs[To use the t-distribution, either n has to be large or the population has to be normally distributed. If these conditions are met, then t has a t-distribution when the null hypothesis is true]
-&lt;/details&gt;
-
-
-
-
----
-
 class: action
 
 # &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;1&lt;/i&gt;    
@@ -815,19 +762,17 @@ class: action
 ]
 .pull-right-60[
 &lt;br&gt;
-&lt;br&gt;
 .bql[
-
-Let's go over to the class activity .Rmd file and complete the tasks for today.
-
-
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
 ]
 
 ]
 
-<div class="countdown" id="timer_5e4e0aa2" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_f0546b7e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
