--- a/static/stat120/Day25.html
+++ b/static/stat120/Day25.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- November 07 2023
+ November 08 2023
 
 ---
 
@@ -376,7 +376,7 @@ stat &lt;- Cuckoo %&gt;%
 
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -514,7 +514,7 @@ count: false
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -530,7 +530,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -547,7 +547,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -565,7 +565,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -584,7 +584,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -606,7 +606,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -630,7 +630,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -655,7 +655,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -681,7 +681,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Side-by-side Boxplot (1a)
+## Side-by-side Boxplot
 .panel1-boxplot-auto[
 
 ```r
@@ -741,7 +741,7 @@ Cuckoo %&gt;%
 
 class: middle
 
-# Check Assumptions (1b)
+# Check Assumptions 
 
 .bql[
 `$$H_0: \text{The mean egg length is equal between the different bird tpyes.}$$`
@@ -1039,7 +1039,7 @@ Cuckoo %&gt;%
 
 ---
 
-# Fitting ANOVA (1c)
+# Fitting ANOVA 
 
 
 ```r
@@ -1088,7 +1088,8 @@ the corresponding `df=n-k`
 
 ---
 
-# Cuckoo Eggs (1d)
+# Cuckoo Eggs 
+
 .bqt.font90[Find a 95% confidence interval for the mean cuckoo egg length in .b[European robin] nests (Type = 4).]
 
 .pull-left-60[
@@ -1144,7 +1145,7 @@ Use the usual procedures except estimate any `\(\sigma\)` with the pooled standa
 
 ---
 
-# Cuckoo Eggs (1e)
+# Cuckoo Eggs 
 
 Find a 95% CI for the difference in mean egg length between .b[European robin](type = 4) and .b[Eurasian wren](type = 6) nests.
 
@@ -1189,7 +1190,7 @@ Find a 95% CI for the difference in mean egg length between .b[European robin](t
 
 ---
 
-# Cuckoo Eggs (1f)
+# Cuckoo Eggs 
 
 .bql.font80[Find a 95% CI for the difference in mean egg length between .b[Pied Wagtail] (type = 3) and .b[European robin](type = 4)  nests.]
 
@@ -1261,7 +1262,7 @@ Use a smaller `\(\alpha\)` for each pairwise test (Bonferroni)
 ---
 
 
-# Cuckoo Eggs (1g)
+# Cuckoo Eggs 
 
 &gt; Which means are “different” at a `\(5\%\)` significance level?
 
@@ -1307,7 +1308,7 @@ class: action
 ]
 
 
-<div class="countdown" id="timer_62d3303e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_ed1216e4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
