--- a/public/courses/stat120/week9/index.html
+++ b/public/courses/stat120/week9/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 24 Slides (pdf/html)
-Day 25 Slides (pdf/html)" />
+Day 25 Slides (pdf/html)
+Day 26 Midterm 3" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week9/" />
@@ -298,7 +299,8 @@ Day 25 Slides (pdf/html)" />
   <meta property="og:url" content="/courses/stat120/week9/" />
   <meta property="og:title" content="Week 9 | Deepak Bastola" />
   <meta property="og:description" content="Day 24 Slides (pdf/html)
-Day 25 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 25 Slides (pdf/html)
+Day 26 Midterm 3" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -796,6 +798,7 @@ Day 25 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2e
           <div class="article-style">
             <p>Day 24 Slides (<a href="/stat120/Day24.pdf" target="_blank">pdf</a>/<a href="/stat120/Day24.html" target="_blank">html</a>)</p>
 <p>Day 25 Slides (<a href="/stat120/Day25.pdf" target="_blank">pdf</a>/<a href="/stat120/Day25.html" target="_blank">html</a>)</p>
+<p>Day 26 Midterm 3</p>
 
           </div>
 
