--- a/public/courses/stat120/week10/index.html
+++ b/public/courses/stat120/week10/index.html
@@ -52,7 +52,7 @@
   
     
   
-  <meta name="description" content=" " />
+  <meta name="description" content="Day 27 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week10/" />
@@ -296,7 +296,7 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat120/week10/" />
   <meta property="og:title" content="Week 10 | Deepak Bastola" />
-  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 27 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -792,9 +792,10 @@
           <h1>Week 10</h1>
 
           <div class="article-style">
-            <!--
+            <p>Day 27 Slides (<a href="/stat120/Day27.pdf" target="_blank">pdf</a>/<a href="/stat120/Day27.html" target="_blank">html</a>)</p>
+<!--
 
-Day 27 Slides (<a href="/stat120/Day27.pdf" target="_blank">pdf</a>/<a href="/stat120/Day27.html" target="_blank">html</a>)
+Day 28 Slides (<a href="/stat120/Day28.pdf" target="_blank">pdf</a>/<a href="/stat120/Day28.html" target="_blank">html</a>)
 
 -->
 
