--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -52,9 +52,7 @@
   
     
   
-  <meta name="description" content="Day 4 Slides (pdf/html)
-Day 5 Slides (pdf/html)
-Day 6 Slides (pdf/html)" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week2/" />
@@ -298,9 +296,7 @@ Day 6 Slides (pdf/html)" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
-  <meta property="og:description" content="Day 4 Slides (pdf/html)
-Day 5 Slides (pdf/html)
-Day 6 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -804,9 +800,15 @@ Day 6 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec
           <h1>Week 2</h1>
 
           <div class="article-style">
-            <p>Day 4 Slides (<a href="/stat220/Day4.pdf" target="_blank">pdf</a>/<a href="/stat220/Day4.html" target="_blank">html</a>)</p>
-<p>Day 5 Slides (<a href="/stat220/Day5.pdf" target="_blank">pdf</a>/<a href="/stat220/Day5.html" target="_blank">html</a>)</p>
-<p>Day 6 Slides (<a href="/stat220/Day6.pdf" target="_blank">pdf</a>/<a href="/stat220/Day6.html" target="_blank">html</a>)</p>
+            <!--
+
+Day 4 Slides (<a href="/stat220/Day4.pdf" target="_blank">pdf</a>/<a href="/stat220/Day4.html" target="_blank">html</a>)
+
+Day 5 Slides (<a href="/stat220/Day5.pdf" target="_blank">pdf</a>/<a href="/stat220/Day5.html" target="_blank">html</a>)
+
+Day 6 Slides (<a href="/stat220/Day6.pdf" target="_blank">pdf</a>/<a href="/stat220/Day6.html" target="_blank">html</a>)
+
+-->
 
           </div>
 
