--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -52,8 +52,7 @@
   
     
   
-  <meta name="description" content="Day 10 Slides (pdf/html)
-Day 11 Slides (pdf/html)" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week4/" />
@@ -297,8 +296,7 @@ Day 11 Slides (pdf/html)" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week4/" />
   <meta property="og:title" content="Week 4 | Deepak Bastola" />
-  <meta property="og:description" content="Day 10 Slides (pdf/html)
-Day 11 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -802,8 +800,13 @@ Day 11 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2e
           <h1>Week 4</h1>
 
           <div class="article-style">
-            <p>Day 10 Slides (<a href="/stat220/Day10.pdf" target="_blank">pdf</a>/<a href="/stat220/Day10.html" target="_blank">html</a>)</p>
-<p>Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>)</p>
+            <!--
+
+Day 10 Slides (<a href="/stat220/Day10.pdf" target="_blank">pdf</a>/<a href="/stat220/Day10.html" target="_blank">html</a>)
+
+Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>)
+
+-->
 
           </div>
 
