--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -52,9 +52,7 @@
   
     
   
-  <meta name="description" content="Day 13 Slides (pdf/html)
-Day 14 Slides (pdf/html)
-Day 15 Slides (pdf/html)" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week5/" />
@@ -298,9 +296,7 @@ Day 15 Slides (pdf/html)" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week5/" />
   <meta property="og:title" content="Week 5 | Deepak Bastola" />
-  <meta property="og:description" content="Day 13 Slides (pdf/html)
-Day 14 Slides (pdf/html)
-Day 15 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -804,9 +800,16 @@ Day 15 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2e
           <h1>Week 5</h1>
 
           <div class="article-style">
-            <p>Day 13 Slides (<a href="/stat220/Day13.pdf" target="_blank">pdf</a>/<a href="/stat220/Day13.html" target="_blank">html</a>)</p>
-<p>Day 14 Slides (<a href="/stat220/Day14.pdf" target="_blank">pdf</a>/<a href="/stat220/Day14.html" target="_blank">html</a>)</p>
-<p>Day 15 Slides (<a href="/stat220/Day15.pdf" target="_blank">pdf</a>/<a href="/stat220/Day15.html" target="_blank">html</a>)</p>
+            <!--
+
+Day 13 Slides (<a href="/stat220/Day13.pdf" target="_blank">pdf</a>/<a href="/stat220/Day13.html" target="_blank">html</a>)
+
+Day 14 Slides (<a href="/stat220/Day14.pdf" target="_blank">pdf</a>/<a href="/stat220/Day14.html" target="_blank">html</a>)
+
+Day 15 Slides (<a href="/stat220/Day15.pdf" target="_blank">pdf</a>/<a href="/stat220/Day15.html" target="_blank">html</a>)
+
+
+-->
 
           </div>
 
