--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -52,8 +52,7 @@
   
     
   
-  <meta name="description" content="Day 24 Slides (pdf/html)
-Day 25 Slides (pdf/html)" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week9/" />
@@ -297,8 +296,7 @@ Day 25 Slides (pdf/html)" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week9/" />
   <meta property="og:title" content="Week 9 | Deepak Bastola" />
-  <meta property="og:description" content="Day 24 Slides (pdf/html)
-Day 25 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -802,8 +800,13 @@ Day 25 Slides (pdf/html)" /><meta property="og:image" content="/media/icon_hua2e
           <h1>Week 9</h1>
 
           <div class="article-style">
-            <p>Day 24 Slides (<a href="/stat220/Day24.pdf" target="_blank">pdf</a>/<a href="/stat220/Day24.html" target="_blank">html</a>)</p>
-<p>Day 25 Slides (<a href="/stat220/Day25.pdf" target="_blank">pdf</a>/<a href="/stat220/Day25.html" target="_blank">html</a>)</p>
+            <!--
+
+Day 24 Slides (<a href="/stat220/Day24.pdf" target="_blank">pdf</a>/<a href="/stat220/Day24.html" target="_blank">html</a>)
+
+Day 25 Slides (<a href="/stat220/Day25.pdf" target="_blank">pdf</a>/<a href="/stat220/Day25.html" target="_blank">html</a>)
+
+-->
 
           </div>
 
