--- a/static/stat120/Day1.html
+++ b/static/stat120/Day1.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 02 2024
+ January 04 2024
 
 ---
 
@@ -1386,13 +1386,13 @@ class: action, middle
 &lt;br&gt;
 .bq.font90[
 - Make a course folder called 'stat120' either on your [Maize](https://maize.mathcs.carleton.edu/auth-sign-in?appUri=%2F) account or on your local computer 
-- Please download the Class-Activity-1 template from [moodle](https://moodle.carleton.edu/course/view.php?id=42303) and go to [class helper web page](https://stat120-fall23.netlify.app/) 
+- Please download the Class-Activity-1 template from [moodle](https://moodle.carleton.edu/course/view.php?id=43041) and go to [class helper web page](https://stat120-winter24.netlify.app/) 
 - Let's do this together and have fun. 
 ]
 
 ]
 
-<div class="countdown" id="timer_e5378fb1" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_f94dbb20" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
