--- a/static/stat220/Day1.html
+++ b/static/stat220/Day1.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 02 2024
+ January 04 2024
 
 ---
 
@@ -220,7 +220,7 @@ class: middle
 
 # Class Pipelines
 
-.font140.center[[https://stat220-spring23.netlify.app](https://stat220-winter24.netlify.app)]
+.font140.center[[https://stat220-winter24.netlify.app](https://stat220-winter24.netlify.app)]
 
 
 .bql[
@@ -399,7 +399,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_9e6534dd" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_70eabb5c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
